Fixed line breaks in credits

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
                     <h2>Credits</h2>
                     <ul class="nomarkers">
-                        <li>Lazy Dog font by <a href="https://www.dafont.com/paul-neave.d1372" target="_blank">Paul Neave</a></li>
+                        <li>Lazy&nbsp;Dog font by <a href="https://www.dafont.com/paul-neave.d1372" target="_blank">Paul&nbsp;Neave</a></li>
                         <li>Icons by <a href="https://fontawesome.com/" target="_blank">FontAwesome</a></li>
-                        <li>Phasmophobia by <a href="https://kineticgames.co.uk/" target="_blank">Kinetic Games</a> <i class="fa fa-heart"></i></li>
+                        <li>Phasmophobia by <a href="https://kineticgames.co.uk/" target="_blank">Kinetic&nbsp;Games</a>&nbsp;<i class="fa fa-heart"></i></li>
                     </ul>
                 </section>
             </article>
