--- a/index.html
+++ b/index.html
@@ -11,73 +11,100 @@
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="book">
+            
+            <div id="pages-container">
 
-            <article class="page page-opened">
-                <header class="page-header">
-                    <h1>Ghost Investigation Encyclopedia</h1>
-                </header>
-                <section class="page-half">
-                    <h2>About</h2>
-                    <p>...</p>
-                </section>
-                <section class="page-half">
-                    <h2>Version</h2>
-                    <p>When new updates for Phasmophobia get released, parts of this encyclopedia may become outdated.</p>
-                    <p>This encyclopedia is currently up-to-date with game version 0.7.?.?</p>
 
-                    <h2>Credits</h2>
-                    <ul class="nomarkers">
-                        <li>Lazy&nbsp;Dog font by <a href="https://www.dafont.com/paul-neave.d1372" target="_blank">Paul&nbsp;Neave</a></li>
-                        <li>Icons by <a href="https://fontawesome.com/" target="_blank">FontAwesome</a></li>
-                        <li>Phasmophobia by <a href="https://kineticgames.co.uk/" target="_blank">Kinetic&nbsp;Games</a>&nbsp;<i class="fa fa-heart"></i></li>
-                    </ul>
-                </section>
-            </article>
+                <article class="page">
+                    <header class="page-header">
+                        <h1>Ghost Investigation Encyclopedia</h1>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <h2>About</h2>
+                            <p>Ghost Investigation Encyclopedia is an encyclopedia containing all knowledge about investigating ghosts, including ghost type traits to identify ghosts with limited or even without evidence, equipment functionality and explanations for challenges and events.</p>
+                            <p>It expands on the "Ghost Huntin' - A Survivors Guide" journal commonly used by paranormal investigators.</p>
+                        </section>
+                        <section class="page-half">
+                            <h2>Version</h2>
+                            <p>When new updates for Phasmophobia get released, parts of this encyclopedia may become outdated.</p>
+                            <p><i>This encyclopedia is currently up-to-date with game version 0.7.1.4</i></p>
 
-            <article class="page">
-                <header class="page-header">
-                    <h1>Evidences</h1>
-                </header>
-                <section class="page-half">
-                    <h2>Types of evidence</h2>
-                    <ul class="nomarkers">
-                        <li><i class="fa fa-snowflake"></i> Freezing Temperatures</li>
-                        <li><i class="fa fa-bolt"></i> EMF 5</li>
-                        <li><i class="fa fa-walkie-talkie"></i> Spirit Box</li>
-                        <li><i class="fa fa-fingerprint"></i> Fingerprints</li>
-                        <li><i class="fa fa-book"></i> Ghost Writing</li>
-                        <li><i class="fa fa-video"></i> Ghost Orbs</li>
-                        <li><i class="fa fa-person-running"></i> D.O.T.S</li>
-                    </ul>
-                </section>
-                <section class="page-half">
-                </section>
-            </article>
+                            <h2>Credits</h2>
+                            <ul class="nomarkers">
+                                <li>Lazy&nbsp;Dog font by <a href="https://www.dafont.com/paul-neave.d1372" target="_blank">Paul&nbsp;Neave</a></li>
+                                <li>Icons by <a href="https://fontawesome.com/" target="_blank">Font&nbsp;Awesome</a></li>
+                                <li>Phasmophobia by <span class="nolinebreak"><a href="https://kineticgames.co.uk/" target="_blank">Kinetic&nbsp;Games</a> <i class="fa fa-heart"></i></span></li>
+                            </ul>
+                        </section>
+                    </div>
+                </article>
 
-            <article class="page">
-                <header class="page-header">
-                    <h1>Spirit</h1>
-                </header>
-                <section class="page-half">
-                    <p>Spirits are very common ghosts. They are very powerful, but passive, only attacking when they need to. They defend their place of death to the utmost degree, killing anyone that is caught overstaying their welcome.</p>
-                    <p>Weakness: A Spirit can be temporarily stopped by burning Smudge Sticks near them.</p>
-                    <h2>Evidence</h2>
-                    <ul class="nomarkers">
-                        <li><i class="fa fa-bolt"></i> <a href="#emf5">EMF 5</a></li>
-                        <li><i class="fa fa-walkie-talkie"></i> <a href="#spirit-box">Spirit Box</a></li>
-                        <li><i class="fa fa-book"></i> <a href="#ghost-writing">Ghost Writing</a></li>
-                    </ul>
-                </section>
-                <section class="page-half">
-                    <h2>Detailed Traits</h2>
-                    <p>It was discovered that Spirits are affected by smudging outside of hunts for twice as long as other ghosts, which results in a time span of 120 seconds in which they cannot begin hunting.</p>
-                    <p>While Spirits are the most common type of ghosts, Ghost Hunting Co. distributes their contracts in a way that all investigators will encounter all ghost types equally.</p>
-                </section>
-            </article>
 
+                <article class="page">
+                    <header class="page-header">
+                        <h1 reference="evidences">Evidences</h1>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <h2>Types of evidence</h2>
+                            <ul class="nomarkers">
+                                <li><i class="fa fa-snowflake"></i> Freezing Temperatures</li>
+                                <li><i class="fa fa-bolt"></i> EMF 5</li>
+                                <li><i class="fa fa-walkie-talkie"></i> Spirit Box</li>
+                                <li><i class="fa fa-fingerprint"></i> Fingerprints</li>
+                                <li><i class="fa fa-book"></i> Ghost Writing</li>
+                                <li><i class="fa fa-video"></i> Ghost Orbs</a></li>
+                                <li><i class="fa fa-person-running"></i> D.O.T.S</li>
+                            </ul>
+                        </section>
+                        <section class="page-half">
+                        </section>
+                    </div>
+                </article>
+
+
+                <article class="page">
+                    <header class="page-header">
+                        <h1>Spirit</h1>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Spirits are very common ghosts. They are very powerful, but passive, only attacking when they need to. They defend their place of death to the utmost degree, killing anyone that is caught overstaying their welcome.</p>
+                            <p>Weakness: A Spirit can be temporarily stopped by burning Smudge Sticks near them.</p>
+                            <h2>Evidence</h2>
+                            <ul class="nomarkers">
+                                <li><i class="fa fa-bolt"></i> EMF 5</li>
+                                <li><i class="fa fa-walkie-talkie"></i> Spirit Box</li>
+                                <li><i class="fa fa-book"></i> Ghost Writing</li>
+                            </ul>
+                            <p><a href="#evidences">How to aquire...</a></p>
+                        </section>
+                        <section class="page-half">
+                            <h2>Detailed Traits</h2>
+                            <p>It was discovered that Spirits are affected by smudging outside of hunts for twice as long as other ghosts, which results in a time span of 120 seconds in which they cannot begin hunting.</p>
+                            <p><font color="red">While Spirits are the most common type of ghosts, Ghost&nbsp;Huntin'&nbsp;Distribution hands out their contracts in a way that all investigators will encounter all ghost types equally. <i>(doesn't make sense, they'd have to already know the ghost type then)</i></font></p>
+                        </section>
+                    </div>
+                </article>
+
+
+            </div>
+
+            <div id="page-navigation">
+                <div>
+                    <button id="btn-page-previous" class="btn-page"><i class="fa fa-caret-left"></i></button>
+                    <span id="page-number-left" class="page-number">?</span>
+                </div>
+                <div>
+                    <span id="page-number-right" class="page-number" class="btn-page">?</span>
+                    <button id="btn-page-next" class="btn-page"><i class="fa fa-caret-right"></i></button>
+                </div>
+            </div>
 
         </div>
     </body>
