Scroll improvements, images and content changes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </head>
     <body>
         <div id="book">
-            
+
             <div id="pages-container">
+
 
 
                 <article class="page">
@@ -26,8 +27,8 @@
                     <div class="page-body">
                         <section class="page-half">
                             <h2>About</h2>
-                            <p>Ghost Investigation Encyclopedia is an encyclopedia containing all knowledge about investigating ghosts, including ghost type traits to identify ghosts with limited or even without evidence, equipment functionality and explanations for challenges and events.</p>
-                            <p>It expands on the "Ghost Huntin' - A Survivors Guide" journal commonly used by paranormal investigators.</p>
+                            <p>Ghost&nbsp;Investigation&nbsp;Encyclopedia is an encyclopedia containing all knowledge about investigating paranormal entities.</p>
+                            <p>It expands and improves on the "Ghost Huntin' - A Survivors Guide" journal commonly used by investigators.</p>
                         </section>
                         <section class="page-half">
                             <h2>Version</h2>
@@ -45,52 +46,161 @@
                 </article>
 
 
+
                 <article class="page">
                     <header class="page-header">
-                        <h1 reference="evidences">Evidences</h1>
+                        <h1 id="evidences">Evidences</h1>
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <h2>Types of evidence</h2>
-                            <ul class="nomarkers">
-                                <li><i class="fa fa-snowflake"></i> Freezing Temperatures</li>
-                                <li><i class="fa fa-bolt"></i> EMF 5</li>
-                                <li><i class="fa fa-walkie-talkie"></i> Spirit Box</li>
-                                <li><i class="fa fa-fingerprint"></i> Fingerprints</li>
-                                <li><i class="fa fa-book"></i> Ghost Writing</li>
-                                <li><i class="fa fa-video"></i> Ghost Orbs</a></li>
-                                <li><i class="fa fa-person-running"></i> D.O.T.S</li>
-                            </ul>
+                            <p>
+                                Evidences are the main way of indentifying ghost types.<br>
+                                All types usually show a unique combination of 3 signs that tell what ghost you're dealing with.
+                            </p>
+                            <p>
+                                While it is possible to identify a lot of ghost types using their specific behaviour, abilities or other traits, using evidence is by far the easiest and most reliable form of identification and should be used if possible.
+                            </p>
                         </section>
                         <section class="page-half">
+                            <div class="two-columns">
+                                <div class="image-wrapper">
+                                    <img src="assets/images/placeholder.png">
+                                    <span class="image-description">All evidence tools</span>
+                                </div>
+                                <div class="image-wrapper">
+                                    <img src="assets/images/placeholder.png">
+                                    <span class="image-description">Evidence selection page</span>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-snowflake"></i> Freezing Temperatures</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-bolt"></i> EMF 5</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-walkie-talkie"></i> Spirit Box Response</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-fingerprint"></i> Fingerprints</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-book"></i> Ghost Writing</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-video"></i> Ghost Orbs</a></h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                    </div>
+                </article>
+
+                <article class="page">
+                    <header class="page-header">
+                        <h2><i class="fa fa-person-running"></i> D.O.T.S Silhouette</h2>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </section>
+                        <section class="page-half">
+                            <p>Lorem ipsum dolor sit amet</p>
                         </section>
                     </div>
                 </article>
 
 
+
                 <article class="page">
                     <header class="page-header">
-                        <h1>Spirit</h1>
+                        <h2>Spirit</h2>
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <p>Spirits are very common ghosts. They are very powerful, but passive, only attacking when they need to. They defend their place of death to the utmost degree, killing anyone that is caught overstaying their welcome.</p>
-                            <p>Weakness: A Spirit can be temporarily stopped by burning Smudge Sticks near them.</p>
-                            <h2>Evidence</h2>
+                            <p>Spirits are basic ghosts with nearly no special traits or behaviour. They are very powerful, but passive, only attacking when they need to. They defend their place of death to the utmost degree, killing anyone that is caught overstaying their welcome.</p>
+                            <p><b>Weakness:</b> Spirits are weakened for twice as long <i>(120 seconds)</i> when burning Smudge Sticks near them.</p>
+                            <h3>Evidence</h3>
                             <ul class="nomarkers">
                                 <li><i class="fa fa-bolt"></i> EMF 5</li>
-                                <li><i class="fa fa-walkie-talkie"></i> Spirit Box</li>
+                                <li><i class="fa fa-walkie-talkie"></i> Spirit Box Response</li>
                                 <li><i class="fa fa-book"></i> Ghost Writing</li>
                             </ul>
-                            <p><a href="#evidences">How to aquire...</a></p>
                         </section>
                         <section class="page-half">
-                            <h2>Detailed Traits</h2>
-                            <p>It was discovered that Spirits are affected by smudging outside of hunts for twice as long as other ghosts, which results in a time span of 120 seconds in which they cannot begin hunting.</p>
-                            <p><font color="red">While Spirits are the most common type of ghosts, Ghost&nbsp;Huntin'&nbsp;Distribution hands out their contracts in a way that all investigators will encounter all ghost types equally. <i>(doesn't make sense, they'd have to already know the ghost type then)</i></font></p>
+                            <h3>Ability</h3>
+                            <p>None</p>
+                            <h3>Evidenceless detection</h3>
+                            <p>Smudge the ghost and time how long it takes for it to hunt again. If it doesn't begin a hunt before 120 seconds have passed, it's likely a Spirit.</p>
+                            <p>This test should be done more than once, since other ghosts could also wait a while before hunting after recovering from being weakened by a Smudge Stick.</p>
                         </section>
                     </div>
                 </article>
+
 
 
             </div>
