--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <section class="page-half">
                             <p>
                                 Evidences are the main way of indentifying ghost types.<br>
-                                All types usually show a unique combination of 3 signs that tell what ghost you're dealing with.
+                                All ghosts usually show a specific combination of 3 signs that tell what type you're dealing with.
                             </p>
                             <p>
-                                While it is possible to identify a lot of ghost types using their specific behaviour, abilities or other traits, using evidence is by far the easiest and most reliable form of identification and should be used if possible.
+                                While it is possible to identify a lot of ghost types using their specific behaviour, abilities or other traits, using evidence is by far the easiest and most reliable form of identification and should be used when possible.
                             </p>
                         </section>
                         <section class="page-half">
