--- a/index.html
+++ b/index.html
@@ -60,16 +60,19 @@
                             <p>
                                 While it is possible to identify a lot of ghost types using their specific behaviour, abilities or other traits, using evidence is by far the easiest and most reliable form of identification and should be used when possible.
                             </p>
+                            <p>
+                                Ghost Huntin' Distribution provides all investigators with one of each required evidence tool for free on every investigation to help beginners start out their ghost hunting carreer and prevent bankruptcy.
+                            </p>
                         </section>
                         <section class="page-half">
                             <div class="two-columns">
-                                <div class="image-wrapper">
+                                <div class="image-wrapper image-var2">
                                     <img src="assets/images/placeholder.png">
                                     <span class="image-description">All evidence tools</span>
                                 </div>
-                                <div class="image-wrapper">
+                                <div class="image-wrapper image-var1">
                                     <img src="assets/images/placeholder.png">
-                                    <span class="image-description">Evidence selection page</span>
+                                    <span class="image-description">Evidence selection page in the Journal</span>
                                 </div>
                             </div>
                         </section>
