Table of contents

--- a/index.html
+++ b/index.html
@@ -45,6 +45,112 @@
                     </div>
                 </article>
 
+                
+
+                <article class="page">
+                    <header class="page-header">
+                        <h1>Contents</h1>
+                    </header>
+                    <div class="page-body">
+                        <section class="page-half">
+                            <ul class="nomarkers">
+                                <li>
+                                    <p>Ghosts</p>
+                                    <ul class="nomarkers">
+                                        <li>About</li>
+                                        <li>Ghost Events & Hunts</li>
+                                        <li>
+                                            <p>Types</p>
+                                            <ol class="hidden">
+                                                <li>Spirit</li>
+                                                <li>Wraith</li>
+                                                <li>Phantom</li>
+                                                <li>Poltergeist</li>
+                                                <li>Banshee</li>
+                                                <li>Jinn</li>
+                                                <li>Mare</li>
+                                                <li>Revenant</li>
+                                                <li>Shade</li>
+                                                <li>Demon</li>
+                                                <li>Yurei</li>
+                                                <li>Oni</li>
+                                                <li>Yokai</li>
+                                                <li>Hantu</li>
+                                                <li>Goryo</li>
+                                                <li>Myling</li>
+                                                <li>Onryo</li>
+                                                <li>The Twins</li>
+                                                <li>Raiju</li>
+                                                <li>Obake</li>
+                                                <li>The Mimic</li>
+                                                <li>Moroi</li>
+                                                <li>Deogen</li>
+                                                <li>Thaye</li>
+                                            </ol>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <p>Evidence</p>
+                                    <ul class="nomarkers hidden">
+                                        <li><i class="fa fa-snowflake"></i> Freezing Temperatures</li>
+                                        <li><i class="fa fa-bolt"></i> EMF 5</li>
+                                        <li><i class="fa fa-walkie-talkie"></i> Spirit Box Response</li>
+                                        <li><i class="fa fa-fingerprint"></i> Fingerprints</li>
+                                        <li><i class="fa fa-book"></i> Ghost Writing</li>
+                                        <li><i class="fa fa-video"></i> Ghost Orbs</li>
+                                        <li><i class="fa fa-person-running"></i> D.O.T.S Silhouette</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <p>Tools</p>
+                                    <ul class="nomarkers">
+                                        <li>Base Equipment</li>
+                                        <li>Optional Equipment</li>
+                                        <li class="hidden">Upgrades</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="page-half">
+                            <ul class="nomarkers">
+                                <li>
+                                    <p>Investigating</p>
+                                    <ul class="nomarkers">
+                                        <li>Shop / Storage / Loadouts</li>
+                                        <li>Truck</li>
+                                        <li>Sanity</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <p>Challenges & Events</p>
+                                    <ul class="nomarkers">
+                                        <li>
+                                            <p>Challenges</p>
+                                            <ul class="nomarkers hidden">
+                                                <li>Apocalypse Challenge</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <p>Events</p>
+                                            <ul class="nomarkers hidden">
+                                                <li>Halloween '22</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <p>Unofficial Challenges</p>
+                                            <ul class="nomarkers hidden">
+                                                <li>Zero evidence</li>
+                                                <li>No doors</li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+                </article>
+
 
 
                 <article class="page">
@@ -151,7 +257,7 @@
 
                 <article class="page">
                     <header class="page-header">
-                        <h2><i class="fa fa-video"></i> Ghost Orbs</a></h2>
+                        <h2><i class="fa fa-video"></i> Ghost Orbs</h2>
                     </header>
                     <div class="page-body">
                         <section class="page-half">
