--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <div id="book">
 
+            <div id="bookmarks">
                 <a class="bookmark" href="#start" title="Start"><i class="fa fa-home"></i></a>
                 <a class="bookmark" href="#contents" title="Contents"><i class="fa fa-list"></i></a>
                 <a class="bookmark" href="#ghost-types" title="Ghost Types"><i class="fa fa-ghost"></i></a>
