--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
-        <link rel="stylesheet" href="style.css?v=1">
+        <link rel="stylesheet" href="style.css?v=2">
         <script src="script.js?v=1"></script>
 
         <link rel="manifest" href="manifest.json">
@@ -49,9 +49,9 @@
                             <h2>Credits</h2>
                             <ul class="nomarkers">
                                 <li>Phasmophobia by <span class="nolinebreak"><a href="https://kineticgames.co.uk/" target="_blank">Kinetic&nbsp;Games</a> <i class="fa fa-heart"></i></span></li>
+                                <li>Some information taken from the <span class="nolinebreak"><a href="https://kineticgames.co.uk/" target="_blank">Official&nbsp;Phasmophobia&nbsp;Discord</a> <i class="fa fa-heart"></i></span></li>
                                 <li>Lazy&nbsp;Dog font by <a href="https://www.dafont.com/paul-neave.d1372" target="_blank">Paul&nbsp;Neave</a></li>
                                 <li>Icons by <a href="https://fontawesome.com/" target="_blank">Font&nbsp;Awesome</a></li>
-                                <li>Bookmark textures by <a href="https://www.vecteezy.com/free-vector/red-price-tag" target="_blank">Vecteezy</a></li>
                             </ul>
                         </section>
                     </div>
