Right side bookmarks + minor text changes

--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
         <div id="book">
 
             <div id="bookmarks">
-                <a class="bookmark" href="#contents" title="Contents"><i class="fa fa-list"></i></a>
-                <a class="bookmark" href="#ghost-types" title="Ghost Types"><i class="fa fa-ghost"></i></a>
-                <a class="bookmark" href="#evidence" title="Evidence"><i class="fa fa-clipboard"></i></a>
-                <a class="bookmark" href="#locations" title="Locations"><i class="fa fa-map"></i></a>
-                <a class="bookmark" href="#challenges" title="Challenges & Events"><i class="fa fa-medal"></i></a>
+                <div id="bookmarks-left">
+                    <a class="bookmark" href="#contents" title="Contents"><i class="fa fa-list"></i></a>
+                    <a class="bookmark" href="#ghost-types" title="Ghost Types"><i class="fa fa-ghost"></i></a>
+                    <a class="bookmark" href="#evidence" title="Evidence"><i class="fa fa-clipboard"></i></a>
+                    <a class="bookmark" href="#locations" title="Locations"><i class="fa fa-map"></i></a>
+                    <a class="bookmark" href="#challenges" title="Challenges & Events"><i class="fa fa-medal"></i></a>
+                </div>
+
+                <div id="bookmarks-right">
+                    <a class="bookmark" title="Copy current link"><i class="fa fa-link"></i></a>
+                    <a class="bookmark" title="Install as App"><i class="fa fa-download"></i></a>
+                </div>
             </div>
 
             <div id="pages-container">
@@ -44,7 +51,7 @@
                         <section class="page-half">
                             <h2>Version</h2>
                             <p>When new updates for Phasmophobia get released, parts of this encyclopedia may become outdated.</p>
-                            <p><i>This encyclopedia is currently up-to-date with game version 0.7.1.4</i></p>
+                            <p><i>This encyclopedia is currently up-to-date with game version 0.7.2.0</i></p>
 
                             <h2>Credits</h2>
                             <ul class="nomarkers">
@@ -143,7 +150,7 @@
                         </section>
                         <section class="page-half">
                             <h2>Survival</h2>
-                            <p>To survive a hunt you must turn off all electronic equipment, since ghosts can sense them and will know where you are!</p>
+                            <p>To survive a hunt you must turn off all electrical equipment, since ghosts can sense them and will know where you are!</p>
                             <p>
                                 Then you can go into a hiding spot, which you should search for and memorize before the ghost starts hunting.<br>
                                 You should try to break the ghost's line of sight to you at least twice before entering your hiding spot, as ghosts check your last known location. They might also check the last hiding spot they have found you at in a previous hunt!
