Replaced assets, style changes, slight content changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
-        <link rel="stylesheet" href="style.css?v=4">
+        <link rel="stylesheet" href="style.css?v=5">
         <script src="script.js?v=2"></script>
 
         <link rel="manifest" href="manifest.webmanifest">
@@ -74,7 +74,7 @@
                         <section class="page-half">
                             <ul class="nomarkers">
                                 <li>
-                                    <p>Ghosts</p>
+                                    <p><b>Ghosts</b></p>
                                     <ul class="nomarkers">
                                         <li><a href="#ghosts">About</a></li>
                                         <li><a href="#hunts">Hunts</a></li>
@@ -84,10 +84,10 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <p>Tools</p>
+                                    <p><b>Tools</b></p>
                                     <ul class="nomarkers">
                                         <li><a href="#equipment">Equipment</a></li>
-                                        <li><a href="#shop">GH//OS.T Equipment Store</a></li>
+                                        <li><a href="#store">GH//OS.T Equipment Store</a></li>
                                         <li><a href="#cursed-possessions">Cursed Possessions</a></li>
                                     </ul>
                                 </li>
@@ -96,15 +96,16 @@
                         <section class="page-half">
                             <ul class="nomarkers">
                                 <li>
-                                    <p>Investigation</p>
+                                    <p><b>Investigation</b></p>
                                     <ul class="nomarkers">
                                         <li><a href="#truck">Truck</a></li>
                                         <li><a href="#sanity">Sanity</a></li>
+                                        <li><a href="#photos">Photography</a></li>
                                         <li><a href="#locations">Locations</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <p>Challenges & Events</p>
+                                    <p><b>Challenges & Events</b></p>
                                     <ul class="nomarkers">
                                         <li><a href="#challenges">Challenges</a></li>
                                         <li><a href="#events">Events</a></li>
@@ -555,6 +556,10 @@
                             </ul>
                         </section>
                         <section class="page-half">
+                            <div class="image-wrapper">
+                                <img src="assets/images/ghost_types/obake/unique_handprint.jpg">
+                                <span class="image-description">Unique Obake handprint with six fingers</span>
+                            </div>
                         </section>
                     </div>
                 </article>
@@ -814,22 +819,47 @@
 
                 <article class="page">
                     <header class="page-header">
-                        <h1>Tools</h1>
+                        <h1 id="equipment">Equipment</h1>
                     </header>
                     <div class="page-body">
                         <section class="page-half">
-                            <h2 id="equipment">Equipment</h2>
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h2>Main Equipment</h2>
+                            <ul>
+                                <li><a href="#video-camera">Video Camera</a></li>
+                                <li><a href="#dots-projector">D.O.T.S Projector</a></li>
+                                <li><a href="#emf-reader">EMF Reader</a></li>
+                                <li><a href="#flashlight">Flashlight</a></li>
+                                <li><a href="#ghost-writing-book">Ghost Writing Book</a></li>
+                                <li><a href="#spirit-box">Spirit Box</a></li>
+                                <li><a href="#uv-light">UV Light</a></li>
+                            </ul>
                         </section>
                         <section class="page-half">
-                            <p>Lorem ipsum dolor sit amet</p>
+                            <h2>Optional Equipment</h2>
+                            <ul>
+                                <li><a href="#photo-camera">Photo Camera</a></li>
+                                <li><a href="#candle">Candle</a></li>
+                                <li><a href="#crucifix">Crucifix</a></li>
+                                <li><a href="#glowstick">Glowstick</a></li>
+                                <li><a href="#head-mounted-camera">Head Mounted Camera</a></li>
+                                <li><a href="#lighter">Lighter</a></li>
+                                <li><a href="#motion-sensor">Motion Sensor</a></li>
+                                <li><a href="#parabolic-microphone">Parabolic Microphone</a></li>
+                                <li><a href="#salt">Salt</a></li>
+                                <li><a href="#sanity-pills">Sanity Pills</a></li>
+                                <li><a href="#smudge-sticks">Smudge Sticks</a></li>
+                                <li><a href="#sound-sensor">Sound Sensor</a></li>
+                                <li><a href="#strong-flashlight">Strong Flashlight</a></li>
+                                <li><a href="#thermometer">Thermometer</a></li>
+                                <li><a href="#tripod">Tripod</a></li>
+                            </ul>
                         </section>
                     </div>
                 </article>
                 
                 <article class="page">
                     <header class="page-header">
-                        <h1 id="shop">GH//OS.T Equipment Store</h1>
+                        <h1 id="store">GH//OS.T Equipment Store</h1>
                     </header>
                     <div class="page-body">
                         <section class="page-half">
