--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
     <head>
         <title>Ghost Investigation Encyclopedia</title>
+        <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
+        
+        <meta name="description" content="A book containing all knowledge about ghost investigation.">
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A book containing all knowledge about ghost investigation.">
-        <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
         
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
-        <link rel="stylesheet" href="style.css?v=7">
+
+        <link rel="stylesheet" href="style.css?v=8">
         <script src="script.js?v=3"></script>
 
-        <link rel="manifest" href="manifest.webmanifest">
+        <link rel="manifest" href="manifest.json?v=1">
     </head>
     <body>
         <div id="book">
@@ -787,7 +789,11 @@
                             </div>
                             <div class="image-wrapper">
                                 <img src="assets/images/evidence/ghost_writing/scribbling.jpg">
-                                <span class="image-description">Book with "drawing"</span>
+                                <span class="image-description">Book with scribbling</span>
+                            </div>
+                            <div class="image-wrapper">
+                                <img src="assets/images/placeholder.png">
+                                <span class="image-description">Book with drawing</span>
                             </div>
                         </section>
                     </div>
