--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <div id="bookmarks-left">
                     <a class="bookmark" href="#contents" title="Contents"><i class="fa fa-list"></i></a>
                     <a class="bookmark" href="#ghost-types" title="Ghost Types"><i class="fa fa-ghost"></i></a>
-                    <a class="bookmark" href="#evidence" title="Evidence"><i class="fa fa-clipboard"></i></a>
                     <a class="bookmark" href="#locations" title="Locations"><i class="fa fa-map"></i></a>
                     <a class="bookmark" href="#challenges" title="Challenges & Events"><i class="fa fa-medal"></i></a>
+                    <a class="bookmark bookmark-special" href="#update" title="Phasmophobia Update"><i class="fa fa-star fa-beat"></i></a>
                 </div>
 
                 <div id="bookmarks-right">
-                    <a id="bookmark-copylink" class="bookmark" title="Copy current link"><i class="fa fa-link"></i></a>
-                    <a id="bookmark-install" class="bookmark" title="Install as App"><i class="fa fa-download"></i></a>
+                    <a id="bookmark-install" class="bookmark bookmark-technical" title="Install as App"><i class="fa fa-download"></i></a>
+                    <a id="bookmark-copylink" class="bookmark bookmark-technical" title="Copy current link"><i class="fa fa-link"></i></a>
                 </div>
             </div>
 
@@ -1031,6 +1031,19 @@
                         <section class="page-half">
                             <p>Lorem ipsum dolor sit amet</p>
                         </section>
+                    </div>
+                </article>
+
+                <!-- UPDATE -->
+                
+                <article class="page">
+                    <header class="page-header">
+                        <h1 id="update">Phasmophobia Update</h1>
+                    </header>
+                    <div class="page-body">
+                        <div>
+                            <p>Lorem ipsum dolor sit amet...</p>
+                        </div>
                     </div>
                 </article>
 
