--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
         
         <meta name="description" content="A book containing all knowledge about ghost investigation.">
-
+        <meta name="theme-color" content="#b7ffd1">
+        
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,10 @@
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
 
-        <link rel="stylesheet" href="style.css?v=8">
-        <script src="script.js?v=3"></script>
+        <link rel="stylesheet" href="style.css?v=9">
+        <script src="script.js?v=4"></script>
 
-        <link rel="manifest" href="manifest.json?v=1">
+        <link rel="manifest" href="manifest.json?v=2">
     </head>
     <body>
         <div id="book">
