--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- NO INDEX DURING DEVELOPMENT, REMOVE FOR RELEASE -->
+        <meta name="robots" content="noindex">
         
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/fontawesome.min.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/solid.min.css">
